# elixir-fm

./: README.md
Haskell/ElixirFM/: .tred-stylesheets  Elixir.hs  ElixirFM.cabal  ElixirFM.hs  FM.hs  INSTALL  Main.hs  Setup.PL  Version.hs  elixir.lexicon.xml  elixir.schema.xml
Haskell/ElixirFM/Elixir/: Compose.hs  Data.hs  Derive.hs  Inflect.hs  Lexicon.hs  Lookup.hs  Patterns.hs  Pretty.hs  Resolve.hs  System.hs  Template.hs  Version.hs
Haskell/ElixirFM/Elixir/Data/: Buck2Elixir.pl  Buckwalter.hs  Buckwalter.pl  Classical.hs  Concord.pl  Effective.hs  ExtendLexicon.pl  Extra.hs  Lexicons.hs  Lexicons.pl  Moony.hs  Patterns.hs  Setup.PL  Sunny.hs  buckwalter.btred  include.btred
Haskell/ElixirFM/Elixir/Data/Buckwalter/: COPYRIGHT  Chapter00.hs  Chapter01.hs  Chapter02.hs  Chapter03.hs  Chapter04.hs  Chapter05.hs  Chapter06.hs  Chapter07.hs  Chapter08.hs  Chapter09.hs  Chapter10.hs  Chapter11.hs  Chapter12.hs  Chapter13.hs  Chapter14.hs  Chapter15.hs  Chapter16.hs  Chapter17.hs  Chapter18.hs  Chapter19.hs  Chapter20.hs  Chapter21.hs  Chapter22.hs  Chapter23.hs  Chapter24.hs  Chapter25.hs  Chapter26.hs  Chapter27.hs  Chapter28.hs  Chapters.hs  Lexicon00.hs  Lexicon00.pm  Lexicon01.hs  Lexicon01.pm  Lexicon02.hs  Lexicon02.pm  Lexicon03.hs  Lexicon03.pm  Lexicon04.hs  (+49 more)
Haskell/ElixirFM/Elixir/Data/Buckwalter/Chapter00/: Section01.hs
Haskell/ElixirFM/Elixir/Data/Buckwalter/Chapter01/: Section01.hs  Section02.hs  Section03.hs  Section04.hs  Section05.hs  Section06.hs
Haskell/ElixirFM/Elixir/Data/Buckwalter/Chapter02/: Section01.hs  Section02.hs  Section03.hs  Section04.hs  Section05.hs  Section06.hs  Section07.hs
Haskell/ElixirFM/Elixir/Data/Buckwalter/Chapter03/: Section01.hs  Section02.hs
Haskell/ElixirFM/Elixir/Data/Buckwalter/Chapter04/: Section01.hs  Section02.hs
Haskell/ElixirFM/Elixir/Data/Buckwalter/Chapter05/: Section01.hs  Section02.hs  Section03.hs  Section04.hs  Section05.hs
Haskell/ElixirFM/Elixir/Data/Buckwalter/Chapter06/: Section01.hs  Section02.hs  Section03.hs  Section04.hs  Section05.hs  Section06.hs
Haskell/ElixirFM/Elixir/Data/Buckwalter/Chapter07/: Section01.hs  Section02.hs  Section03.hs  Section04.hs  Section05.hs
Haskell/ElixirFM/Elixir/Data/Buckwalter/Chapter08/: Section01.hs  Section02.hs  Section03.hs  Section04.hs
Haskell/ElixirFM/Elixir/Data/Buckwalter/Chapter09/: Section01.hs
Haskell/ElixirFM/Elixir/Data/Buckwalter/Chapter10/: Section01.hs  Section02.hs  Section03.hs  Section04.hs  Section05.hs  Section06.hs
Haskell/ElixirFM/Elixir/Data/Buckwalter/Chapter11/: Section01.hs  Section02.hs  Section03.hs
Haskell/ElixirFM/Elixir/Data/Buckwalter/Chapter12/: Section01.hs  Section02.hs  Section03.hs  Section04.hs  Section05.hs  Section06.hs  Section07.hs
Haskell/ElixirFM/Elixir/Data/Buckwalter/Chapter13/: Section01.hs  Section02.hs  Section03.hs  (+2 more)
Haskell/ElixirFM/Elixir/Data/Effective/: Chapter00.hs  Chapter01.hs  Chapter02.hs  Chapter03.hs  Chapter04.hs  Chapter05.hs  Chapter06.hs  Chapter07.hs  Chapter08.hs  Chapter09.hs  Chapter10.hs  Chapter11.hs  Chapter12.hs  Chapter13.hs  Chapter14.hs  Chapter15.hs  Chapter16.hs  Chapter17.hs  Chapter18.hs  Chapter19.hs  Chapter20.hs  Chapter21.hs  Chapter22.hs  Chapter23.hs  Chapter24.hs  Chapter25.hs  Chapter26.hs  Chapter27.hs  Chapter28.hs  Classical.hs  Lexicon00.hs  Lexicon01.hs  Lexicon02.hs  Lexicon03.hs  Lexicon04.hs  Lexicon05.hs  Lexicon06.hs  Lexicon07.hs  Lexicon08.hs  Lexicon09.hs  (+19 more)
Haskell/ElixirFM/Elixir/Data/Lexicons/: Chapter00.hs  Chapter01.hs  Chapter03.hs  Chapter04.hs  Chapter05.hs  Chapter06.hs  Chapter08.hs  Chapter10.hs  Chapter12.hs  Chapter15.hs  Chapter16.hs  Chapter20.hs  Chapter24.hs  Chapter28.hs  Chapters.hs  Classical.hs  Lexicon00.hs  Lexicon00.pm  Lexicon01.hs  Lexicon01.pm  Lexicon02.hs  Lexicon02.pm  Lexicon03.hs  Lexicon03.pm  Lexicon04.hs  Lexicon04.pm  Lexicon05.hs  Lexicon05.pm  Lexicon06.hs  Lexicon06.pm  Lexicon07.hs  Lexicon07.pm  Lexicon08.hs  Lexicon08.pm  Lexicon09.hs  Lexicon09.pm  Lexicon10.hs  Lexicon10.pm  Lexicon11.hs  Lexicon11.pm  (+34 more)
Haskell/ElixirFM/Elixir/Data/Moony/: Complex.hs  Doubled.hs  Foreign.hs  Regular.hs
Haskell/ElixirFM/Elixir/Data/Patterns/: Literal.hs  Quadriliteral.hs  Triliteral.hs
Haskell/ElixirFM/Elixir/Data/Sunny/: Complex.hs  Doubled.hs  Foreign.hs  Regular.hs
Haskell/ElixirFM/Elixir/Lexicon/: Pretty.hs  System.hs
Haskell/ElixirFM/Elixir/Lexicon/Pretty/: Haskell.hs  LaTeX.hs  Perl.hs  XML.hs
Haskell/ElixirFM/Elixir/Patterns/: Literal.hs  Quadriliteral.hs  Triliteral.hs
Haskell/ElixirFM/Exec/: ElixirFM-Exec.cabal  Setup.PL
Haskell/ElixirFM/Exec/Clean/: Clean.hs
Haskell/ElixirFM/Exec/Compose/: ElixirFM-Exec-Compose.cabal  Main.hs
Haskell/ElixirFM/Exec/ElixirFM/: Main.hs
Haskell/ElixirFM/Exec/FunnyMorph/: Main.hs
Haskell/ElixirFM/Exec/Inflect/: Main.hs
Haskell/ElixirFM/Exec/Resolve/: ElixirFM-Exec-Resolve.cabal  Main.hs  elixir.css  index.fcgi  index.html  index.php
Haskell/ElixirFM/Exec/Resolve/listexpander/: listexpander.css
Haskell/ElixirFM/FM/: Arabic.hs  Generic.hs  Makefile  trie.c
Haskell/ElixirFM/FM/Arabic/: Attr.hs  Build.hs  Commands.hs  Composite.hs  Dict.hs  Dictionary.hs  Guessing.hs  Lexicon.hs  Main.hs  Rules.hs  Types.hs
Haskell/ElixirFM/FM/Arabic/Lexicon/: buckwalter.lexicon
Haskell/ElixirFM/FM/Generic/: CTrie.c  CTrie.hs  Clean.hs  CommonMain.hs  Dictionary.hs  ErrM.hs  Frontend.hs  GenFM.hs  General.hs  GeneralIO.hs  Invariant.hs  Map.hs  Options.hs  Print.hs  RedBlack.hs  SharedString.hs  Tokenize.hs  Trie.hs  UTF8.hs
Haskell/ElixirFM/FM/Generic/Dictionary/: Pretty.hs
Haskell/ElixirFM/FM/Latin/: Attr.hs  Build.hs  Commands.hs  Composite.hs  Dict.hs  Rules.hs  Types.hs
Haskell/ElixirFM/FunnyMorph/: Arabic.hs  Generic.hs  Makefile
Haskell/ElixirFM/FunnyMorph/Arabic/: Attr.hs  Build.hs  Commands.hs  Rules.hs  Types.hs
Haskell/ElixirFM/FunnyMorph/Generic/: Clean.hs  Dictionary.hs  Frontend.hs  GenFM.hs  General.hs  GeneralIO.hs  Invariant.hs  Trie.hs
Haskell/ElixirFM/FunnyMorph/Generic/Dictionary/: Pretty.hs
Haskell/ElixirFM/Text/PrettyPrint/: Leijen.hs
(+336 files in other folders)
