name:               ElixirFM
version:            1.1
license:            GPL
license-file:       LICENSE
extra-source-files: INSTALL
copyright:          2008
author:             Otakar Smrz
maintainer:         otakar.smrz mff.cuni.cz
homepage:           http://ufal.mff.cuni.cz/~smrz/
package-url:        http://ufal.mff.cuni.cz/~smrz/ElixirFM/ElixirFM-1.1.zip
category:           Various
build-depends:      Encode, Cabal, base, containers, wl-pprint
-- hs-source-dirs:     ., ../Encode
synopsis:           Functional Arabic Morphology
description:        The "Elixir" and "FM" libraries of "ElixirFM" implement
                    /Functional Arabic Morphology/. They have been designed by
                    Otakar Smr&#382; and are part of his PhD thesis
                    /Functional Arabic Morphology. Formal System and Implementation/,
                    Charles University in Prague, July 2007,
                    <http://ufal.mff.cuni.cz/~smrz/elixir-thesis.pdf>. The complete
                    project is hosted on <http://sourceforge.net/projects/elixir-fm/>
                    and the libraries are documented on
                    <http://ufal.mff.cuni.cz/~smrz/ElixirFM/>.
                    .
                    /ElixirFM/ is inspired by and extends the /Functional Morphology/
                    library developed by Markus Forsberg in his licenciate thesis
                    /Applications of Functional Programming in Processing Formal and Natural Languages/,
                    G&#246;teborg University and Chalmers University of Technology,
                    December 2004, <http://www.cs.chalmers.se/~markus/FM/>.
                    .
                    The "Version" library is just a simple support for
                    working with the CVS\/SVN revision keyword.
                    .
                    "ElixirFM" "Elixir" "FM"
exposed-modules:    ElixirFM,
                    Elixir,
                        -- Elixir.Data,
                            Elixir.Data.Classical,
                            Elixir.Data.Buckwalter,
                                Elixir.Data.Buckwalter.Lexicon00,
                                Elixir.Data.Buckwalter.Lexicon01,
                                Elixir.Data.Buckwalter.Lexicon02,
                                Elixir.Data.Buckwalter.Lexicon03,
                                Elixir.Data.Buckwalter.Lexicon04,
                                Elixir.Data.Buckwalter.Lexicon05,
                                Elixir.Data.Buckwalter.Lexicon06,
                                Elixir.Data.Buckwalter.Lexicon07,
                                Elixir.Data.Buckwalter.Lexicon08,
                                Elixir.Data.Buckwalter.Lexicon09,
                                Elixir.Data.Buckwalter.Lexicon10,
                                Elixir.Data.Buckwalter.Lexicon11,
                                Elixir.Data.Buckwalter.Lexicon12,
                                Elixir.Data.Buckwalter.Lexicon13,
                                Elixir.Data.Buckwalter.Lexicon14,
                                Elixir.Data.Buckwalter.Lexicon15,
                                Elixir.Data.Buckwalter.Lexicon16,
                                Elixir.Data.Buckwalter.Lexicon17,
                                Elixir.Data.Buckwalter.Lexicon18,
                                Elixir.Data.Buckwalter.Lexicon19,
                                Elixir.Data.Buckwalter.Lexicon20,
                                Elixir.Data.Buckwalter.Lexicon21,
                                Elixir.Data.Buckwalter.Lexicon22,
                                Elixir.Data.Buckwalter.Lexicon23,
                                Elixir.Data.Buckwalter.Lexicon24,
                                Elixir.Data.Buckwalter.Lexicon25,
                                Elixir.Data.Buckwalter.Lexicon26,
                                Elixir.Data.Buckwalter.Lexicon27,
                                Elixir.Data.Buckwalter.Lexicon28,
                            Elixir.Data.Effective,
                                Elixir.Data.Effective.Lexicon00,
                                Elixir.Data.Effective.Lexicon01,
                                Elixir.Data.Effective.Lexicon02,
                                Elixir.Data.Effective.Lexicon03,
                                Elixir.Data.Effective.Lexicon04,
                                Elixir.Data.Effective.Lexicon05,
                                Elixir.Data.Effective.Lexicon06,
                                Elixir.Data.Effective.Lexicon07,
                                Elixir.Data.Effective.Lexicon08,
                                Elixir.Data.Effective.Lexicon09,
                                Elixir.Data.Effective.Lexicon10,
                                Elixir.Data.Effective.Lexicon11,
                                Elixir.Data.Effective.Lexicon12,
                                Elixir.Data.Effective.Lexicon13,
                                Elixir.Data.Effective.Lexicon14,
                                Elixir.Data.Effective.Lexicon15,
                                Elixir.Data.Effective.Lexicon16,
                                Elixir.Data.Effective.Lexicon17,
                                Elixir.Data.Effective.Lexicon18,
                                Elixir.Data.Effective.Lexicon19,
                                Elixir.Data.Effective.Lexicon20,
                                Elixir.Data.Effective.Lexicon21,
                                Elixir.Data.Effective.Lexicon22,
                                Elixir.Data.Effective.Lexicon23,
                                Elixir.Data.Effective.Lexicon24,
                                Elixir.Data.Effective.Lexicon25,
                                Elixir.Data.Effective.Lexicon26,
                                Elixir.Data.Effective.Lexicon27,
                                Elixir.Data.Effective.Lexicon28,
                            Elixir.Data.Lexicons,
                            Elixir.Data.Patterns,
                                Elixir.Data.Patterns.Literal,
                                Elixir.Data.Patterns.Triliteral,
                                Elixir.Data.Patterns.Quadriliteral,
                        Elixir.Derive,
                        Elixir.Inflect,
                        Elixir.Lexicon,
                            Elixir.Lexicon.Pretty,
                                -- Elixir.Lexicon.Pretty.Haskell,
                                -- Elixir.Lexicon.Pretty.LaTeX,
                                Elixir.Lexicon.Pretty.Perl,
                        Elixir.Lookup,
                        Elixir.Pretty,
                        Elixir.Resolve,
                        Elixir.System,
                        Elixir.Template,
                    FM,
                        FM.Generic,
                            FM.Generic.Clean,
                            FM.Generic.CommonMain,
                            FM.Generic.Dictionary,
                                FM.Generic.Dictionary.Pretty,
                                    FM.Generic.Dictionary.Pretty.GF,
                                    FM.Generic.Dictionary.Pretty.LaTeX,
                                    FM.Generic.Dictionary.Pretty.Lexc,
                                    FM.Generic.Dictionary.Pretty.SQL,
                                    FM.Generic.Dictionary.Pretty.XFST,
                                    FM.Generic.Dictionary.Pretty.XML,
                            FM.Generic.ErrM,
                            FM.Generic.Frontend,
                            FM.Generic.General,
                            FM.Generic.GeneralIO,
                            FM.Generic.GenFM,
                            FM.Generic.Invariant,
                            FM.Generic.Map,
                            FM.Generic.Print,
                            FM.Generic.RedBlack,
                            FM.Generic.Trie,
                        FM.Arabic,
                            FM.Arabic.Attr,
                            FM.Arabic.Build,
                            FM.Arabic.Commands,
                            FM.Arabic.Composite,
                            FM.Arabic.Dict,
                            FM.Arabic.Dictionary,
                            FM.Arabic.Main,
                            FM.Arabic.Rules,
                            FM.Arabic.Types,
                            FM.Arabic.Lexicon,
                    Version
extensions:         MultiParamTypeClasses,
                    FunctionalDependencies,
                    ExistentialQuantification,
                    -- PolymorphicComponents,
                    RankNTypes,
                    ForeignFunctionInterface,
                    OverlappingInstances,
                    -- IncoherentInstances,
                    UndecidableInstances,
                    TypeSynonymInstances,
                    FlexibleInstances,
                    FlexibleContexts
