name:               ElixirFM
version:            1.1
license:            GPL
license-file:       LICENSE
extra-source-files: INSTALL, Setup.PL
copyright:          2008
author:             Otakar Smrz
maintainer:         otakar.smrz mff.cuni.cz
homepage:           http://ufal.mff.cuni.cz/~smrz/
package-url:        http://sourceforge.net/projects/elixir-fm/
category:           Various
build-depends:      Encode, Cabal, base, containers, wl-pprint
synopsis:           Functional Arabic Morphology
description:        The "ElixirFM" library implements a computational model of the morphological
                    processes in Arabic. Both the library and the model have been designed by
                    Otakar Smr&#382; and are described in his PhD thesis
                    /Functional Arabic Morphology. Formal System and Implementation/,
                    Charles University in Prague, July 2007,
                    <http://ufal.mff.cuni.cz/~smrz/elixir-thesis.pdf>.
                    The complete project is hosted on <http://sourceforge.net/projects/elixir-fm/>
                    and the code is documented on <http://ufal.mff.cuni.cz/~smrz/ElixirFM/>.
                    .
                    /ElixirFM/ is inspired by and can directly extend the /Functional Morphology/
                    library developed by Markus Forsberg in his licenciate thesis
                    /Applications of Functional Programming in Processing Formal and Natural Languages/,
                    G&#246;teborg University and Chalmers University of Technology,
                    December 2004, <http://www.cs.chalmers.se/~markus/FM/>.
                    .
                    The "Version" library is just a simple support for
                    working with the CVS\/SVN revision keyword.
                    .
                    "ElixirFM"
exposed-modules:    ElixirFM,
                    --  Elixir,
                        --  Elixir.Data,
                            Elixir.Data.Extra,
                            Elixir.Data.Moony,
                                Elixir.Data.Moony.Complex,
                                Elixir.Data.Moony.Foreign,
                                Elixir.Data.Moony.Regular,
                            Elixir.Data.Sunny,
                                Elixir.Data.Sunny.Complex,
                                Elixir.Data.Sunny.Foreign,
                                Elixir.Data.Sunny.Regular,
                            Elixir.Data.Lexicons,
                            Elixir.Data.Patterns,
                                Elixir.Data.Patterns.Literal,
                                Elixir.Data.Patterns.Triliteral,
                                Elixir.Data.Patterns.Quadriliteral,
                        Elixir.Compose,
                        Elixir.Derive,
                        Elixir.Inflect,
                        Elixir.Lexicon,
                            Elixir.Lexicon.Pretty,
                                --  Elixir.Lexicon.Pretty.Haskell,
                                --  Elixir.Lexicon.Pretty.LaTeX,
                                Elixir.Lexicon.Pretty.Perl,
                                Elixir.Lexicon.Pretty.XML,
                            Elixir.Lexicon.System,
                        Elixir.Lookup,
                        Elixir.Pretty,
                        Elixir.Resolve,
                        Elixir.System,
                        Elixir.Template,
                    --  FM,
                        --  FM.Generic,
                            FM.Generic.General,
                    --  Text,
                        --  Text.PrettyPrint,
                            Text.PrettyPrint.Leijen,
                    Version
other-modules:                      Elixir.Data.Moony.Complex.A,
                                    Elixir.Data.Moony.Complex.B,
                                    Elixir.Data.Moony.Complex.C,
                                    Elixir.Data.Moony.Complex.D,
                                    Elixir.Data.Moony.Complex.E,
                                    Elixir.Data.Moony.Complex.F,
                                    Elixir.Data.Moony.Complex.G,
                                    Elixir.Data.Moony.Complex.H,
                                    Elixir.Data.Moony.Complex.I,
                                    Elixir.Data.Moony.Foreign.A,
                                    Elixir.Data.Moony.Foreign.B,
                                    Elixir.Data.Moony.Foreign.C,
                                    Elixir.Data.Moony.Foreign.D,
                                    Elixir.Data.Moony.Regular.A,
                                    Elixir.Data.Moony.Regular.B,
                                    Elixir.Data.Moony.Regular.C,
                                    Elixir.Data.Moony.Regular.D,
                                    Elixir.Data.Moony.Regular.E,
                                    Elixir.Data.Moony.Regular.F,
                                    Elixir.Data.Moony.Regular.G,
                                    Elixir.Data.Moony.Regular.H,
                                    Elixir.Data.Moony.Regular.I,
                                    Elixir.Data.Moony.Regular.J,
                                    Elixir.Data.Moony.Regular.K,
                                    Elixir.Data.Moony.Regular.L,
                                    Elixir.Data.Moony.Regular.M,
                                    Elixir.Data.Moony.Regular.N,
                                    Elixir.Data.Moony.Regular.O,
                                    Elixir.Data.Moony.Regular.P,
                                    Elixir.Data.Moony.Regular.Q,
                                    Elixir.Data.Moony.Regular.R,
                                    Elixir.Data.Moony.Regular.S,
                                    Elixir.Data.Moony.Regular.T,
                                    Elixir.Data.Moony.Regular.U,
                                    Elixir.Data.Moony.Regular.V,
                                    Elixir.Data.Moony.Regular.W,
                                    Elixir.Data.Sunny.Complex.A,
                                    Elixir.Data.Sunny.Complex.B,
                                    Elixir.Data.Sunny.Complex.C,
                                    Elixir.Data.Sunny.Complex.D,
                                    Elixir.Data.Sunny.Complex.E,
                                    Elixir.Data.Sunny.Complex.F,
                                    Elixir.Data.Sunny.Foreign.A,
                                    Elixir.Data.Sunny.Foreign.B,
                                    Elixir.Data.Sunny.Regular.A,
                                    Elixir.Data.Sunny.Regular.B,
                                    Elixir.Data.Sunny.Regular.C,
                                    Elixir.Data.Sunny.Regular.D,
                                    Elixir.Data.Sunny.Regular.E,
                                    Elixir.Data.Sunny.Regular.F,
                                    Elixir.Data.Sunny.Regular.G,
                                    Elixir.Data.Sunny.Regular.H,
                                    Elixir.Data.Sunny.Regular.I,
                                    Elixir.Data.Sunny.Regular.J,
                                    Elixir.Data.Sunny.Regular.K,
                                    Elixir.Data.Sunny.Regular.L,
                                    Elixir.Data.Sunny.Regular.M
extensions:         MultiParamTypeClasses,
                    FunctionalDependencies,
                    ExistentialQuantification,
                    --  PolymorphicComponents,
                    RankNTypes,
                    --  PatternSignatures,
                    OverlappingInstances,
                    --  IncoherentInstances,
                    UndecidableInstances,
                    TypeSynonymInstances,
                    FlexibleInstances,
                    FlexibleContexts
ghc-options:        -O0
hugs-options:       -98 +o +u -h64M

executable:         elixir
main-is:            Exec/ElixirFM/Main.hs
other-modules:      ElixirFM,
                    --  Elixir,
                        --  Elixir.Data,
                            Elixir.Data.Extra,
                            Elixir.Data.Moony,
                                Elixir.Data.Moony.Complex,
                                    Elixir.Data.Moony.Complex.A,
                                    Elixir.Data.Moony.Complex.B,
                                    Elixir.Data.Moony.Complex.C,
                                    Elixir.Data.Moony.Complex.D,
                                    Elixir.Data.Moony.Complex.E,
                                    Elixir.Data.Moony.Complex.F,
                                    Elixir.Data.Moony.Complex.G,
                                    Elixir.Data.Moony.Complex.H,
                                    Elixir.Data.Moony.Complex.I,
                                Elixir.Data.Moony.Foreign,
                                    Elixir.Data.Moony.Foreign.A,
                                    Elixir.Data.Moony.Foreign.B,
                                    Elixir.Data.Moony.Foreign.C,
                                    Elixir.Data.Moony.Foreign.D,
                                Elixir.Data.Moony.Regular,
                                    Elixir.Data.Moony.Regular.A,
                                    Elixir.Data.Moony.Regular.B,
                                    Elixir.Data.Moony.Regular.C,
                                    Elixir.Data.Moony.Regular.D,
                                    Elixir.Data.Moony.Regular.E,
                                    Elixir.Data.Moony.Regular.F,
                                    Elixir.Data.Moony.Regular.G,
                                    Elixir.Data.Moony.Regular.H,
                                    Elixir.Data.Moony.Regular.I,
                                    Elixir.Data.Moony.Regular.J,
                                    Elixir.Data.Moony.Regular.K,
                                    Elixir.Data.Moony.Regular.L,
                                    Elixir.Data.Moony.Regular.M,
                                    Elixir.Data.Moony.Regular.N,
                                    Elixir.Data.Moony.Regular.O,
                                    Elixir.Data.Moony.Regular.P,
                                    Elixir.Data.Moony.Regular.Q,
                                    Elixir.Data.Moony.Regular.R,
                                    Elixir.Data.Moony.Regular.S,
                                    Elixir.Data.Moony.Regular.T,
                                    Elixir.Data.Moony.Regular.U,
                                    Elixir.Data.Moony.Regular.V,
                                    Elixir.Data.Moony.Regular.W,
                            Elixir.Data.Sunny,
                                Elixir.Data.Sunny.Complex,
                                    Elixir.Data.Sunny.Complex.A,
                                    Elixir.Data.Sunny.Complex.B,
                                    Elixir.Data.Sunny.Complex.C,
                                    Elixir.Data.Sunny.Complex.D,
                                    Elixir.Data.Sunny.Complex.E,
                                    Elixir.Data.Sunny.Complex.F,
                                Elixir.Data.Sunny.Foreign,
                                    Elixir.Data.Sunny.Foreign.A,
                                    Elixir.Data.Sunny.Foreign.B,
                                Elixir.Data.Sunny.Regular,
                                    Elixir.Data.Sunny.Regular.A,
                                    Elixir.Data.Sunny.Regular.B,
                                    Elixir.Data.Sunny.Regular.C,
                                    Elixir.Data.Sunny.Regular.D,
                                    Elixir.Data.Sunny.Regular.E,
                                    Elixir.Data.Sunny.Regular.F,
                                    Elixir.Data.Sunny.Regular.G,
                                    Elixir.Data.Sunny.Regular.H,
                                    Elixir.Data.Sunny.Regular.I,
                                    Elixir.Data.Sunny.Regular.J,
                                    Elixir.Data.Sunny.Regular.K,
                                    Elixir.Data.Sunny.Regular.L,
                                    Elixir.Data.Sunny.Regular.M,
                            Elixir.Data.Lexicons,
                            Elixir.Data.Patterns,
                                Elixir.Data.Patterns.Literal,
                                Elixir.Data.Patterns.Triliteral,
                                Elixir.Data.Patterns.Quadriliteral,
                        Elixir.Compose,
                        Elixir.Derive,
                        Elixir.Inflect,
                        Elixir.Lexicon,
                            Elixir.Lexicon.Pretty,
                                --  Elixir.Lexicon.Pretty.Haskell,
                                --  Elixir.Lexicon.Pretty.LaTeX,
                                Elixir.Lexicon.Pretty.Perl,
                                Elixir.Lexicon.Pretty.XML,
                            Elixir.Lexicon.System,
                        Elixir.Lookup,
                        Elixir.Pretty,
                        Elixir.Resolve,
                        Elixir.System,
                        Elixir.Template,
                    --  FM,
                        --  FM.Generic,
                            FM.Generic.General,
                    --  Text,
                        --  Text.PrettyPrint,
                            Text.PrettyPrint.Leijen,
                    Version
extensions:         MultiParamTypeClasses,
                    FunctionalDependencies,
                    ExistentialQuantification,
                    --  PolymorphicComponents,
                    RankNTypes,
                    --  PatternSignatures,
                    OverlappingInstances,
                    --  IncoherentInstances,
                    UndecidableInstances,
                    TypeSynonymInstances,
                    FlexibleInstances,
                    FlexibleContexts
ghc-options:        -O0
hugs-options:       -98 +o +u -h64M

--  executable:         elixir-resolve
--  main-is:            Exec/Resolve/Main.hs

--  executable:         elixir-compose
--  main-is:            Exec/Compose/Main.hs
--  other-modules:      ElixirFM,
--                      --  Elixir,
--                          --  Elixir.Data,
--                              Elixir.Data.Extra,
--                              Elixir.Data.Moony,
--                                  Elixir.Data.Moony.Complex,
--                                      Elixir.Data.Moony.Complex.A,
--                                      Elixir.Data.Moony.Complex.B,
--                                      Elixir.Data.Moony.Complex.C,
--                                      Elixir.Data.Moony.Complex.D,
--                                      Elixir.Data.Moony.Complex.E,
--                                      Elixir.Data.Moony.Complex.F,
--                                      Elixir.Data.Moony.Complex.G,
--                                      Elixir.Data.Moony.Complex.H,
--                                      Elixir.Data.Moony.Complex.I,
--                                  Elixir.Data.Moony.Foreign,
--                                      Elixir.Data.Moony.Foreign.A,
--                                      Elixir.Data.Moony.Foreign.B,
--                                      Elixir.Data.Moony.Foreign.C,
--                                      Elixir.Data.Moony.Foreign.D,
--                                  Elixir.Data.Moony.Regular,
--                                      Elixir.Data.Moony.Regular.A,
--                                      Elixir.Data.Moony.Regular.B,
--                                      Elixir.Data.Moony.Regular.C,
--                                      Elixir.Data.Moony.Regular.D,
--                                      Elixir.Data.Moony.Regular.E,
--                                      Elixir.Data.Moony.Regular.F,
--                                      Elixir.Data.Moony.Regular.G,
--                                      Elixir.Data.Moony.Regular.H,
--                                      Elixir.Data.Moony.Regular.I,
--                                      Elixir.Data.Moony.Regular.J,
--                                      Elixir.Data.Moony.Regular.K,
--                                      Elixir.Data.Moony.Regular.L,
--                                      Elixir.Data.Moony.Regular.M,
--                                      Elixir.Data.Moony.Regular.N,
--                                      Elixir.Data.Moony.Regular.O,
--                                      Elixir.Data.Moony.Regular.P,
--                                      Elixir.Data.Moony.Regular.Q,
--                                      Elixir.Data.Moony.Regular.R,
--                                      Elixir.Data.Moony.Regular.S,
--                                      Elixir.Data.Moony.Regular.T,
--                                      Elixir.Data.Moony.Regular.U,
--                                      Elixir.Data.Moony.Regular.V,
--                                      Elixir.Data.Moony.Regular.W,
--                              Elixir.Data.Sunny,
--                                  Elixir.Data.Sunny.Complex,
--                                      Elixir.Data.Sunny.Complex.A,
--                                      Elixir.Data.Sunny.Complex.B,
--                                      Elixir.Data.Sunny.Complex.C,
--                                      Elixir.Data.Sunny.Complex.D,
--                                      Elixir.Data.Sunny.Complex.E,
--                                      Elixir.Data.Sunny.Complex.F,
--                                  Elixir.Data.Sunny.Foreign,
--                                      Elixir.Data.Sunny.Foreign.A,
--                                      Elixir.Data.Sunny.Foreign.B,
--                                  Elixir.Data.Sunny.Regular,
--                                      Elixir.Data.Sunny.Regular.A,
--                                      Elixir.Data.Sunny.Regular.B,
--                                      Elixir.Data.Sunny.Regular.C,
--                                      Elixir.Data.Sunny.Regular.D,
--                                      Elixir.Data.Sunny.Regular.E,
--                                      Elixir.Data.Sunny.Regular.F,
--                                      Elixir.Data.Sunny.Regular.G,
--                                      Elixir.Data.Sunny.Regular.H,
--                                      Elixir.Data.Sunny.Regular.I,
--                                      Elixir.Data.Sunny.Regular.J,
--                                      Elixir.Data.Sunny.Regular.K,
--                                      Elixir.Data.Sunny.Regular.L,
--                                      Elixir.Data.Sunny.Regular.M,
--                              Elixir.Data.Lexicons,
--                              Elixir.Data.Patterns,
--                                  Elixir.Data.Patterns.Literal,
--                                  Elixir.Data.Patterns.Triliteral,
--                                  Elixir.Data.Patterns.Quadriliteral,
--                          Elixir.Compose,
--                          Elixir.Derive,
--                          Elixir.Inflect,
--                          Elixir.Lexicon,
--                              Elixir.Lexicon.Pretty,
--                                  --  Elixir.Lexicon.Pretty.Haskell,
--                                  --  Elixir.Lexicon.Pretty.LaTeX,
--                                  Elixir.Lexicon.Pretty.Perl,
--                                  Elixir.Lexicon.Pretty.XML,
--                              Elixir.Lexicon.System,
--                          Elixir.Lookup,
--                          Elixir.Pretty,
--                          Elixir.Resolve,
--                          Elixir.System,
--                          Elixir.Template,
--                      --  FM,
--                          --  FM.Generic,
--                              FM.Generic.General,
--                      --  Text,
--                          --  Text.PrettyPrint,
--                              Text.PrettyPrint.Leijen,
--                      Version
--  extensions:         MultiParamTypeClasses,
--                      FunctionalDependencies,
--                      ExistentialQuantification,
--                      --  PolymorphicComponents,
--                      RankNTypes,
--                      --  PatternSignatures,
--                      OverlappingInstances,
--                      --  IncoherentInstances,
--                      UndecidableInstances,
--                      TypeSynonymInstances,
--                      FlexibleInstances,
--                      FlexibleContexts
--  ghc-options:        -O0
--  hugs-options:       -98 +o +u -h64M
