name:               ElixirFM-Exec
version:            0.1
license:            GPL
license-file:       ../License.txt
copyright:          2006
author:             Otakar Smrz
maintainer:         otakar.smrz mff.cuni.cz
homepage:           http://ufal.mff.cuni.cz/~smrz/
package-url:        http://ufal.mff.cuni.cz/~smrz/ElixirFM/ElixirFM-Exec-0.1.zip
category:           Various
build-depends:      Cabal, base
synopsis:           Functional Arabic Morphology
description:        The "Elixir" and "FunnyMorph" libraries are an
                    implementation of Functional Arabic Morphology and an
                    extension to the /FM Functional Morphology/ library
                    developed by Markus Forsberg in his licenciate thesis
                    /Applications of Functional Programming in Processing
                    Formal and Natural Languages/, G&#246;teborg University
                    and Chalmers University of Technology, December 2004,
                    <http://www.cs.chalmers.se/~markus/FM/>.
                    .
                    "Elixir" "FunnyMorph"

executable:         funnymorph
main-is:            Exec/FunnyMorph/Main.hs
hs-source-dirs:     ., ..
ghc-options:        -fglasgow-exts
